tests/ui/issues/issue-51116.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-51116.rs:5:13
   |
LL |             *tile = 0;
   |             ^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
